<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:orientation="vertical"
    android:weightSum="15">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sensor_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_weight="8"
            android:gravity="center_vertical"
            android:text="@string/sensor_name"
            android:textSize="24sp" />

       <!-- <TextView
            android:id="@+id/sensor_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center|center_vertical"
            android:text="@string/sensor_type" /> -->

        <TextView
            android:id="@+id/rssi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_weight="2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/sensor_rssi" />

        <Button
            android:id="@+id/more_info_button"
            style="@style/RoundStyleButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_weight="5"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/select" />

       <!-- <Button
            android:id="@+id/serialize_sensor_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_weight="3"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/serialize" /> -->
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/property_text_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.appcompat.widget.LinearLayoutCompat>

