<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.commcare.dalvik.sibel.viewmodels.BiolandBPMonitoringViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.309">

            <TextView
                android:id="@+id/bp_systolic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="3"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/systolic_BP"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bp_systolic_data"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="4"
                android:gravity="center_horizontal|center_vertical"
                android:text="@{viewModel.systolicBP}"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.462">

            <TextView
                android:id="@+id/bp_diastolic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="3"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/diastolic_BP"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bp_distolic_data"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="4"
                android:gravity="center_horizontal|center_vertical"
                android:text="@{viewModel.diastolicBP}"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.621">

            <TextView
                android:id="@+id/pulserate_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="3"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/pulse_rate"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pulserate_data"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="4"
                android:gravity="center_horizontal|center_vertical"
                android:text="@{viewModel.pulserate}"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.703">

            <Button
                android:id="@+id/btn_start_bp_measurement"
                style="@style/RoundStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="@{viewModel.startEnabled}"
                android:clickable="@{viewModel.startEnabled}"
                android:onClick="@{()->viewModel.onClickStartBPMeasurement()}"
                android:text="@string/start_bp_measure"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_stop_bp_measurement"
                style="@style/RoundStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="@{viewModel.stopEnabled}"
                android:clickable="@{viewModel.stopEnabled}"
                android:onClick="@{()->viewModel.onClickStopBPMeasurement()}"
                android:paddingHorizontal="10dp"
                android:text="@string/stop_bp_measure"
                android:textAlignment="center" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat4"
            android:layout_width="189dp"
            android:layout_height="64dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.833">

            <Button
                android:id="@+id/return_bp"
                style="@style/RoundStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="@{viewModel.returnEnabled}"
                android:clickable="@{viewModel.returnEnabled}"
                android:text="@string/return_btn"
                android:textAlignment="center" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>