<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.commcare.dalvik.sibel.viewmodels.ConnectionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/viewgroup_sensor_details_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/viewgroup_sensor_details_connection_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/sensor_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="3"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/sensor_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sensor_name_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="4"
                android:gravity="center_horizontal|center_vertical"
                android:text="@{viewModel.sensor.name}"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/viewgroup_sensor_details_connection_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/sensor_connection_status"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="3"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/connection_status"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rssi"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="4"
                android:gravity="center_horizontal|center_vertical"
                android:text="@{viewModel.isConnectedText}"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.693">

            <Button
                style="@style/RoundStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="@{viewModel.isProceedEnabled ? false : true}"
                android:enabled="@{viewModel.isProceedEnabled ? false : true}"
                android:onClick="@{() -> viewModel.onScanButtonTapped()}"
                android:scanningButtonText="@{viewModel.isScanning()}"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_connect_sensor"
                style="@style/RoundStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonText="@{viewModel.connectButtonText}"
                android:onClick="@{()->viewModel.onConnectButtonTapped()}"
                android:paddingHorizontal="10dp"
                android:textAlignment="center" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat2"
            android:layout_width="252dp"
            android:layout_height="58dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="164dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/proceed"
                style="@style/RoundStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="@{viewModel.isProceedEnabled}"
                android:clickable="@{viewModel.isProceedEnabled}"
                android:text="@string/proceed"
                android:textAlignment="center" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
